--- a/frontend/src/templates/EnvironmentMenu.html
+++ b/frontend/src/templates/EnvironmentMenu.html
@@ -4,7 +4,7 @@
     </md-button>
     <md-menu-content width="4" class="md-menu-content">
         <md-menu-item>
-            <md-button ng-click="ctrl.setCampaignGroup('supporterplus')">
+            <md-button ng-click="ctrl.setCampaignGroup('supporterPlus')">
                 <md-icon md-font-set="material-icons" md-menu-align-target>people</md-icon>
                 Supporter Plus
             </md-button>
