feat: add tier three product and remove s+ ratePLans

--- a/frontend/src/templates/EnvironmentMenu.html
+++ b/frontend/src/templates/EnvironmentMenu.html
@@ -10,6 +10,12 @@
             </md-button>
         </md-menu-item>
         <md-menu-item>
+            <md-button ng-click="ctrl.setCampaignGroup('tierThree')">
+                <md-icon md-font-set="material-icons" md-menu-align-target>emoji_events</md-icon>
+                Tier Three
+            </md-button>
+        </md-menu-item>
+        <md-menu-item>
             <md-button ng-click="ctrl.setCampaignGroup('digitalpack')">
                 <md-icon md-font-set="material-icons" md-menu-align-target>tablet_mac</md-icon>
                 Digital Pack
